fixed add task button and bar not showing and ffixed overdue counter logic

--- a/public/stylesheets/task.css
+++ b/public/stylesheets/task.css
@@ -27,17 +27,11 @@
 .button-1 {
     display: inline-flex;
     padding: 5px;
-    position: relative;
-    left: 910px;
-    top: 10px;
     font-size: 17px;
     border-right: 1px solid;
 }
 .button-2 {
     display: inline-flex;
-    position: relative;
-    left: 915px;
-    top: 10px;
     font-size: 17px;
     padding: 5px;
 
@@ -81,7 +75,7 @@
 }
  .addTaskbox {
      height: 40px;
-     width: 1100px;
+     width: 1050px;
      display: block;
      margin: 5px;
      border-radius: 3px;
@@ -90,11 +84,9 @@
  }
 
 .addTaskButton {
-    display: block;
-    position: relative;
-    left: 1000px;
     height: 30px;
     width: 70px;
+    margin-left: 85%;
     font-size: 12px;
     background-color: #e6d7ec;
     border: none;
@@ -186,6 +178,14 @@
     font-size: 20px;
     padding: 10px;
     margin: 0px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.incomplete-complete-container {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: 75%;
 }
 
 .tasksCount {
@@ -314,8 +314,6 @@
 .delete-button {
     height: 25px;
     font-size: 16px;
-    position: absolute;
-    left: 1000px;
     text-align: center;
     border: 1px solid #ae3cdb;
     border-radius: 3px;
